--- a/web_app1/blog/templates/blog/about.html
+++ b/web_app1/blog/templates/blog/about.html
@@ -1,5 +1,8 @@
 {% extends "blog/base.html" %}
 {% block content %}
-       <h1>About Page!</h1>
+     <img src="https://www.optomaeurope.com/images/ProductApplicationFeatures/4kuhd/banner.jpg">
+
+      
+       <h1>Made in love and passion wid india!</h1>
 {% endblock content %}
 
